--- a/src/main/resources/static/admin/imgLibr/examples/index-bs4.html
+++ b/src/main/resources/static/admin/imgLibr/examples/index-bs4.html
@@ -334,7 +334,7 @@
         });
         $('#inp-add-2').fileinput({
             uploadUrl: '#',
-            //uploadUrl: 'http://localhost/plugins/test-upload',
+            uploadUrl: 'http://localhost/plugins/test-upload',
             initialPreviewAsData: true,
             initialPreview: [
                 "https://dummyimage.com/640x360/a0f.png&text=Transport+1",
